# pyregistry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  mkdocs.yml  qualirs.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build-and-release.yml  fuzz.yml  test.yml  update-yara-signatures.yml
crates/application/: Cargo.toml
crates/application/src/: admin_ops.rs  audit_ops.rs  audit_trail_ops.rs  distribution_validation_ops.rs  error.rs  governance_ops.rs  lib.rs  models.rs  package_ops.rs  publish_ops.rs  security_ops.rs  service.rs  tests.rs
crates/application/src/audit_ops/: tests.rs
crates/application/src/models/: audit.rs  commands.rs  distribution.rs  identity.rs  mod.rs  overview.rs  package.rs  ports.rs  security.rs  tests.rs
crates/application/src/package_ops/: tests.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: cli.rs  commands.rs  logging.rs  main.rs  reports.rs  server.rs  tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  ids.rs  lib.rs  tests.rs  value_objects.rs
crates/infrastructure/: Cargo.toml  build.rs
crates/infrastructure/src/: crypto.rs  distribution_validation.rs  ignored_findings.rs  lib.rs  mirror.rs  oidc.rs  postgres_store.rs  security.rs  security_unavailable.rs  settings.rs  source_security.rs  source_security_unavailable.rs  sql_server_store.rs  sqlite_store.rs  storage.rs  store.rs  supplied_assets.rs  virus.rs  virus_unavailable.rs  webhook.rs  wheel_archive.rs  wiring.rs
crates/infrastructure/src/settings/: tests.rs
crates/web/: Cargo.toml
crates/web/src/: admin.rs  audit.rs  auth.rs  error.rs  lib.rs  models.rs  network_source.rs  package_api.rs  rate_limit.rs  state.rs
crates/web/templates/: dashboard.html  error.html  index.html  login.html  message.html  package_detail.html  simple_index.html  simple_project.html
docs/: architecture.md  company-adoption.md  development.md  index.md  mental-model.md  quickstart.md
docs/operations/: configuration.md  deployment.md  security.md  troubleshooting.md
docs/usage/: admin-workflows.md  python-clients.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: distribution_validation.rs  domain_inputs.rs  wheel_archive.rs  wheel_audit.rs
scripts/: coverage.sh  pyregistry-release.sh  update-yara-signatures.sh
supplied/signature-base/: SOURCE.txt
