[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/web",
    "crates/bootstrap",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
askama = "0.15.6"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie-signed"] }
base64 = "0.22"
bstr = "1.12"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
flate2 = "1.1"
foxguard = "0.6.2"
futures-channel = "0.3"
futures-util = "0.3"
hex = "0.4"
http = "1.3"
http-body-util = "0.1"
include_dir = "0.7"
jsonwebtoken = "10.2"
log = "0.4"
mime = "0.3"
opendal = { version = "0.55", features = ["services-fs", "services-s3"] }
pep440 = "0.2"
pysentry = "0.4.4"
rand = "0.10.1"
rayon = "1.10"
regex = "1.12"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls"] }
limbo = { version = "0.0.22", features = ["index_experimental"] }
rustpython-parser = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tar = "0.4"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
toml = "1.1.2+spec-1.1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
yara-x = "1.15.0"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
