[package]
name = "pyregistry-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
pyregistry-domain = { path = "../domain" }
rand.workspace = true
rustpython-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
