[package]
name = "pyregistry-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
pyregistry-domain = { path = "../domain", version = "0.1.1" }
rand.workspace = true
rayon.workspace = true
rustpython-parser = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
default = ["python-ast-audit"]
python-ast-audit = ["dep:rustpython-parser"]

[dev-dependencies]
tokio.workspace = true
