[package]
name = "pyregistry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
pyregistry-application = { path = "../application" }
pyregistry-infrastructure = { path = "../infrastructure" }
pyregistry-web = { path = "../web" }
regex.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
zip.workspace = true
