[package]
name = "pyregistry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
pyregistry-application = { path = "../application", version = "0.1.1" }
pyregistry-infrastructure = { path = "../infrastructure", version = "0.1.1" }
pyregistry-web = { path = "../web", version = "0.1.1" }
regex.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
zip.workspace = true
