[package]
name = "pyregistry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
pyregistry-application = { path = "../application", version = "0.1.1", default-features = false }
pyregistry-infrastructure = { path = "../infrastructure", version = "0.1.1", default-features = false }
pyregistry-web = { path = "../web", version = "0.1.1" }
regex.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
zip.workspace = true

[features]
default = [
    "python-ast-audit",
    "sqlite",
    "postgres",
    "sqlserver",
    "opendal-fs",
    "s3",
    "security-default",
]
sqlite = ["pyregistry-infrastructure/sqlite"]
postgres = ["pyregistry-infrastructure/postgres"]
sqlserver = ["pyregistry-infrastructure/sqlserver"]
opendal-fs = ["pyregistry-infrastructure/opendal-fs"]
s3 = ["pyregistry-infrastructure/s3"]
security-default = [
    "source-security",
    "vulnerability-db",
]
security-full = [
    "source-security",
    "file-type-ml",
    "vulnerability-db",
    "virus-yara",
]
source-security = ["pyregistry-infrastructure/source-security"]
file-type-ml = ["pyregistry-infrastructure/file-type-ml"]
vulnerability-db = ["pyregistry-infrastructure/vulnerability-db"]
virus-yara = ["pyregistry-infrastructure/virus-yara"]
python-ast-audit = ["pyregistry-application/python-ast-audit"]
minimal-local = ["sqlite"]
