[package]
name = "pyregistry-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
pep440.workspace = true
regex.workspace = true
thiserror.workspace = true
uuid.workspace = true
