[package]
name = "pyregistry-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
flate2.workspace = true
foxguard.workspace = true
hex.workspace = true
include_dir.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
opendal.workspace = true
pyregistry-application = { path = "../application" }
pyregistry-domain = { path = "../domain" }
rand.workspace = true
reqwest.workspace = true
turso.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tiberius.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-util.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true
yara-x.workspace = true
zip.workspace = true

[dev-dependencies]
bstr.workspace = true

# pysentry declares an unconditional cdylib target; MinGW cannot link it on Windows.
[target.'cfg(not(all(windows, target_env = "gnu")))'.dependencies]
pysentry.workspace = true
