[package]
name = "pyregistry-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
mime.workspace = true
pyregistry-application = { path = "../application" }
pyregistry-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
