[package]
name = "pyregistry-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
http.workspace = true
log.workspace = true
mime.workspace = true
pyregistry-application = { path = "../application", version = "0.1.1", default-features = false }
pyregistry-domain = { path = "../domain", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
pyregistry-infrastructure = { path = "../infrastructure", version = "0.1.1" }
tower.workspace = true
